Align section titles below fixed header and realign nav links in the navbar

--- a/src/styling/organisation/index.css
+++ b/src/styling/organisation/index.css
@@ -2,6 +2,10 @@ html {
   overflow: scroll !important;
 }
 
+.section-title {
+  margin-top: 5.5rem;
+}
+
 .site-container {
 display: flex;
 flex-direction: column;
